--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,8 +1,12 @@
 .footer{
-    width: 20rem;
-   padding: 1rem;
-    height: 12rem;
+    width: 100%;
+    height: 100%;
     display: grid;
+    place-items: center;
+}
+.footer p{
+    color: white;
+    font-size: 1.2rem;
 }
 .ref{
     text-decoration: none;
@@ -12,7 +16,6 @@
     display: grid;
     width: 100%;
     background: linear-gradient(90deg, #d91111 0%, #ad0e0e 100%);
-    grid-template-columns: repeat(3, 1fr);
-    height: 20rem;
+    height: 10rem;
     place-items: center;
 }
