--- a/src/components/Quienes/header/headerq.css
+++ b/src/components/Quienes/header/headerq.css
@@ -68,3 +68,11 @@
         font-size: 1.5rem;
     }
 }
+@media (max-width: 400px) {
+    .texto-header{
+        font-size: 1.5rem;
+    }
+    .par-header{
+        font-size: 1.2rem;
+    }
+}
