--- a/src/components/icons/icons.css
+++ b/src/components/icons/icons.css
@@ -20,3 +20,12 @@
     place-items: center;
     cursor: pointer;
 }
+
+@media (max-width: 400px) {
+    .icon{
+        font-size: 1.5rem;
+    }
+    .text{
+        font-size: .9rem;
+    }
+}
