--- a/src/components/products/products.css
+++ b/src/components/products/products.css
@@ -1,13 +1,15 @@
 .products{
     display: grid;
     place-items: center;
-    margin-top: 4rem;
+    padding-top: 5rem;
+    padding-bottom: 10rem;
 }
 .p-content{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
+    gap: 5rem;
 }
+
 @media (max-width: 1000px) {
     .p-content{
         grid-template-columns: none;
