--- a/src/components/icons/icons.css
+++ b/src/components/icons/icons.css
@@ -1,6 +1,6 @@
 .icons{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     place-items: center;
     margin-top: 5rem;
 }
@@ -20,7 +20,13 @@
     place-items: center;
     cursor: pointer;
 }
-
+.text-icons p{
+    cursor: pointer;
+}
+.text-icons a{
+    text-decoration: none;
+    color: black;
+}
 @media (max-width: 400px) {
     .icon{
         font-size: 1.5rem;
@@ -28,8 +34,4 @@
     .text{
         font-size: .9rem;
     }
-}
-
-.icons-container{
-    display: none;
 }
