--- a/src/components/tests/test.css
+++ b/src/components/tests/test.css
@@ -8,6 +8,7 @@
 }
 .test-container{
     width: 70%;
+    margin-bottom: 6rem;
 }
 .card{
     width: 50%;
@@ -28,6 +29,7 @@
 }
 .imgHikes{
     width: 100%;
+    height: 100%;
 }
 @media (max-width: 900px) {
     .test-content{
@@ -38,4 +40,7 @@
         width: auto;
         height: auto;
     }
+}
+.test-container p{
+    font-size: 1.5rem;
 }
